# MimiSort

./: HydraSort_v2_RP2040-test-code.h  README.md
Research_Material/: Algorithmic_Efficiency_Framework-v1.md  HYDRASORT-v2-Code-Implementation.md  HYDRA_SORT_RP2040 (1).md  HYDRA_SORT_RP2040_THEORY.md
hydra-sort/: CMakeLists.txt  README.md
hydra-sort/docs/: ALGORITHM.md  OPTIMIZATION.md
hydra-sort/examples/: basic_usage.c  benchmark.c
hydra-sort/include/: hydra_sort_v2.h
hydra-sort/tests/: test_correctness.c
